plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.5'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.ssafy'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

bootRun {
	// 환경 변수 파일을 로드하고 JVM 시스템 프로퍼티로 설정
	doFirst {
		def dotenv = io.github.cdimascio.dotenv.Dotenv.load()
		systemProperties = [
				'MONGO_INITDB_ROOT_USERNAME': dotenv.get("MONGO_INITDB_ROOT_USERNAME"),
				'MONGO_INITDB_ROOT_PASSWORD': dotenv.get("MONGO_INITDB_ROOT_PASSWORD"),
				'MONGO_INITDB_ROOT_DATABASE': dotenv.get("MONGO_INITDB_ROOT_DATABASE")
		]
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// OkHttp
	implementation 'com.squareup.okhttp3:okhttp:4.9.0'

	// Gson
	implementation 'com.google.code.gson:gson:2.8.6'

	// Google Cloud Speech Client Library
	implementation 'com.google.cloud:google-cloud-speech:1.28.0'
	// Google Cloud Text-to-Speech Client Library
	implementation 'com.google.cloud:google-cloud-texttospeech:1.3.0'

	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'

	implementation 'io.github.cdimascio:dotenv-java:2.2.0'
}

tasks.named('test') {
	useJUnitPlatform()
}
